--- a/Priya.ipynb
+++ b/Priya.ipynb
@@ -10,19 +10,7 @@
     "#                            \"Purchase Count\": [],\n",
     "#                            \"Average Purchase Price\": [],\n",
     "#                           \"Total Purchase Value\": []})\n",
-    "\n",
-    "\n",
-    "# popular_df = pd.DataFrame({\"Item ID\": [],\n",
-    "#                            \"Item Name\": [],\n",
-    "#                            \"Purchase Count\": [],\n",
-    "#                            \"Item Price\": [],\n",
-    "#                           \"Total Purchase Value\": []})\n",
-    "\n",
-    "# profitable_df = pd.DataFrame({\"Item ID\": [],\n",
-    "#                            \"Item Name\": [],\n",
-    "#                            \"Purchase Count\": [],\n",
-    "#                            \"Item Price\": [],\n",
-    "#                           \"Total Purchase Value\": []})"
+    "\n"
    ]
   },
   {
@@ -30,7 +18,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#what happens now"
+   ]
   },
   {
    "cell_type": "code",
@@ -70,9 +60,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
