--- a/Esther's Notebook.ipynb
+++ b/Esther's Notebook.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Esthers Notebook"
+    "#Esthers Notebook\n",
+    "\n"
    ]
   }
  ],
