--- a/Esther's Notebook.ipynb
+++ b/Esther's Notebook.ipynb
@@ -33117,7 +33117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -33165,16 +33165,6 @@
       "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
       " 24 25 26 27 28 29 30 31 32 33 34 35]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 1.0, 'Cholesterol in MILK')"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -33226,7 +33216,7 @@
     "plt.ylabel('Calories', fontsize=16)\n",
     "plt.title(f'{selectednutrient} in {selectedcategory}')\n",
     "\n",
-    "\n",
+    "plt.savefig(\"./Esther's Resources/cholesterol.png\")\n",
     "#tick_locations = [value+0.4 for value in x_axis]\n",
     "#plt.figure(figsize=(20,3))\n",
     "\n",
@@ -33238,8 +33228,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "metadata": {},
+   "execution_count": 161,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -33286,16 +33278,6 @@
       "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
       " 24 25 26 27 28 29 30 31 32 33 34 35]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 1.0, 'Carbs (g) in MILK')"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -33347,6 +33329,8 @@
     "plt.ylabel('Calories', fontsize=16)\n",
     "plt.title(f'{selectednutrient} in {selectedcategory}')\n",
     "\n",
+    "plt.savefig(\"./Esther's Resources/carbs.png\")\n",
+    "\n",
     "\n",
     "#tick_locations = [value+0.4 for value in x_axis]\n",
     "#plt.figure(figsize=(20,3))\n",
@@ -33359,7 +33343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -33407,16 +33391,6 @@
       "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
       " 24 25 26 27 28 29 30 31 32 33 34 35]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 1.0, 'Sugars in MILK')"
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -33469,6 +33443,9 @@
     "plt.title(f'{selectednutrient} in {selectedcategory}')\n",
     "\n",
     "\n",
+    "plt.savefig(\"./Esther's Resources/sugars.png\")\n",
+    "\n",
+    "\n",
     "#tick_locations = [value+0.4 for value in x_axis]\n",
     "#plt.figure(figsize=(20,3))\n",
     "\n",
@@ -33480,7 +33457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -33528,16 +33505,6 @@
       "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
       " 24 25 26 27 28 29 30 31 32 33 34 35]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 1.0, 'Saturated Fat in MILK')"
-      ]
-     },
-     "execution_count": 154,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -33589,6 +33556,9 @@
     "plt.ylabel('Calories', fontsize=16)\n",
     "plt.title(f'{selectednutrient} in {selectedcategory}')\n",
     "\n",
+    "plt.savefig(\"./Esther's Resources/satfat.png\")\n",
+    "\n",
+    "\n",
     "\n",
     "#tick_locations = [value+0.4 for value in x_axis]\n",
     "#plt.figure(figsize=(20,3))\n",
@@ -33622,7 +33592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
