--- a/Priya.ipynb
+++ b/Priya.ipynb
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,6 +1269,519 @@
    ],
    "source": [
     "print(f\"Of the {len(cleaned_access)} farmers markets we have collected, {len(support_none_df)} do not have any food assistance programs, {len(support_all_df)} has all three noted food assistance programs and {len(support_some_df)} has at least one of the three food assistance programs available.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>MarketName_x</th>\n",
+       "      <th>MarketName_y</th>\n",
+       "      <th>MarketName_x</th>\n",
+       "      <th>MarketName_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>125</td>\n",
+       "      <td>61</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>29</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>87</td>\n",
+       "      <td>47</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>87</td>\n",
+       "      <td>62</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>California</td>\n",
+       "      <td>717</td>\n",
+       "      <td>340</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>377.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Colorado</td>\n",
+       "      <td>150</td>\n",
+       "      <td>138</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Connecticut</td>\n",
+       "      <td>141</td>\n",
+       "      <td>95</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>46.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Delaware</td>\n",
+       "      <td>32</td>\n",
+       "      <td>26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Florida</td>\n",
+       "      <td>250</td>\n",
+       "      <td>223</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>27.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Georgia</td>\n",
+       "      <td>153</td>\n",
+       "      <td>136</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Hawaii</td>\n",
+       "      <td>68</td>\n",
+       "      <td>39</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Idaho</td>\n",
+       "      <td>58</td>\n",
+       "      <td>57</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>320</td>\n",
+       "      <td>254</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>66.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Indiana</td>\n",
+       "      <td>180</td>\n",
+       "      <td>83</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>97.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Iowa</td>\n",
+       "      <td>202</td>\n",
+       "      <td>122</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Kansas</td>\n",
+       "      <td>105</td>\n",
+       "      <td>57</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>48.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Kentucky</td>\n",
+       "      <td>116</td>\n",
+       "      <td>62</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>54.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>70</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>37.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Maine</td>\n",
+       "      <td>88</td>\n",
+       "      <td>47</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>41.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Maryland</td>\n",
+       "      <td>136</td>\n",
+       "      <td>42</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>94.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Massachusetts</td>\n",
+       "      <td>310</td>\n",
+       "      <td>113</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>197.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Michigan</td>\n",
+       "      <td>315</td>\n",
+       "      <td>152</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>163.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Minnesota</td>\n",
+       "      <td>173</td>\n",
+       "      <td>134</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>39.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Mississippi</td>\n",
+       "      <td>73</td>\n",
+       "      <td>51</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Missouri</td>\n",
+       "      <td>229</td>\n",
+       "      <td>221</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Montana</td>\n",
+       "      <td>67</td>\n",
+       "      <td>49</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Nebraska</td>\n",
+       "      <td>94</td>\n",
+       "      <td>56</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>38.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Nevada</td>\n",
+       "      <td>35</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>New Hampshire</td>\n",
+       "      <td>87</td>\n",
+       "      <td>74</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>141</td>\n",
+       "      <td>77</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>New Mexico</td>\n",
+       "      <td>65</td>\n",
+       "      <td>19</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>46.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>New York</td>\n",
+       "      <td>560</td>\n",
+       "      <td>199</td>\n",
+       "      <td>168.0</td>\n",
+       "      <td>361.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>North Carolina</td>\n",
+       "      <td>227</td>\n",
+       "      <td>183</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>44.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>North Dakota</td>\n",
+       "      <td>59</td>\n",
+       "      <td>59</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>296</td>\n",
+       "      <td>184</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>112.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Oklahoma</td>\n",
+       "      <td>56</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>136</td>\n",
+       "      <td>43</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>93.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>282</td>\n",
+       "      <td>165</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>117.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Puerto Rico</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Rhode Island</td>\n",
+       "      <td>29</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>26.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>South Carolina</td>\n",
+       "      <td>122</td>\n",
+       "      <td>81</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>41.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>South Dakota</td>\n",
+       "      <td>34</td>\n",
+       "      <td>32</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Tennessee</td>\n",
+       "      <td>112</td>\n",
+       "      <td>97</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Texas</td>\n",
+       "      <td>213</td>\n",
+       "      <td>180</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>33.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Utah</td>\n",
+       "      <td>34</td>\n",
+       "      <td>33</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>Vermont</td>\n",
+       "      <td>75</td>\n",
+       "      <td>37</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>38.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>183</td>\n",
+       "      <td>159</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>Washington</td>\n",
+       "      <td>165</td>\n",
+       "      <td>48</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>117.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>76</td>\n",
+       "      <td>27</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>49.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>265</td>\n",
+       "      <td>117</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>148.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>45</td>\n",
+       "      <td>44</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             State  MarketName_x  MarketName_y  MarketName_x  MarketName_y\n",
+       "0          Alabama           125            61           4.0          64.0\n",
+       "1           Alaska            29            14           5.0          15.0\n",
+       "2          Arizona            87            47          28.0          40.0\n",
+       "3         Arkansas            87            62           5.0          25.0\n",
+       "4       California           717           340         120.0         377.0\n",
+       "5         Colorado           150           138           1.0          12.0\n",
+       "6      Connecticut           141            95          14.0          46.0\n",
+       "7         Delaware            32            26           NaN           6.0\n",
+       "8          Florida           250           223           5.0          27.0\n",
+       "9          Georgia           153           136           3.0          17.0\n",
+       "10          Hawaii            68            39           NaN          29.0\n",
+       "11           Idaho            58            57           NaN           1.0\n",
+       "12        Illinois           320           254          11.0          66.0\n",
+       "13         Indiana           180            83          30.0          97.0\n",
+       "14            Iowa           202           122          41.0          80.0\n",
+       "15          Kansas           105            57           2.0          48.0\n",
+       "16        Kentucky           116            62           4.0          54.0\n",
+       "17       Louisiana            70            33           1.0          37.0\n",
+       "18           Maine            88            47          14.0          41.0\n",
+       "19        Maryland           136            42          42.0          94.0\n",
+       "20   Massachusetts           310           113          53.0         197.0\n",
+       "21        Michigan           315           152          17.0         163.0\n",
+       "22       Minnesota           173           134          16.0          39.0\n",
+       "23     Mississippi            73            51           2.0          22.0\n",
+       "24        Missouri           229           221           NaN           8.0\n",
+       "25         Montana            67            49           3.0          18.0\n",
+       "26        Nebraska            94            56           3.0          38.0\n",
+       "27          Nevada            35            17           1.0          18.0\n",
+       "28   New Hampshire            87            74           3.0          13.0\n",
+       "29      New Jersey           141            77          23.0          64.0\n",
+       "30      New Mexico            65            19           6.0          46.0\n",
+       "31        New York           560           199         168.0         361.0\n",
+       "32  North Carolina           227           183           3.0          44.0\n",
+       "33    North Dakota            59            59           NaN           NaN\n",
+       "34            Ohio           296           184          25.0         112.0\n",
+       "35        Oklahoma            56            38           1.0          18.0\n",
+       "36          Oregon           136            43          51.0          93.0\n",
+       "37    Pennsylvania           282           165          11.0         117.0\n",
+       "38     Puerto Rico            10             7           NaN           3.0\n",
+       "39    Rhode Island            29             3          17.0          26.0\n",
+       "40  South Carolina           122            81          19.0          41.0\n",
+       "41    South Dakota            34            32           NaN           2.0\n",
+       "42       Tennessee           112            97           1.0          15.0\n",
+       "43           Texas           213           180           NaN          33.0\n",
+       "44            Utah            34            33           NaN           1.0\n",
+       "45         Vermont            75            37           8.0          38.0\n",
+       "46        Virginia           183           159           1.0          24.0\n",
+       "47      Washington           165            48          24.0         117.0\n",
+       "48   West Virginia            76            27          12.0          49.0\n",
+       "49       Wisconsin           265           117          34.0         148.0\n",
+       "50         Wyoming            45            44           NaN           1.0"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food_assistance_count = pd.merge(cleaned_states,none_states, how = \"outer\", on =\"State\")\n",
+    "food_assistance_count = pd.merge(food_assistance_count,all_states,how = \"outer\", on =\"State\" )\n",
+    "food_assistance_count = pd.merge(food_assistance_count,some_states,how = \"outer\", on =\"State\" )\n",
+    "food_assistance_count"
    ]
   },
   {
