--- a/Project1_Analysis_Sush.ipynb
+++ b/Project1_Analysis_Sush.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -198,21 +198,22 @@
        "4  ['tomato juice', 'apple cider vinegar', 'sugar...              8  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load in csv\n",
-    "recipes_df = pd.read_csv(\"./Project_Data/RAW_recipes.csv\")\n",
+    "url='https://media.githubusercontent.com/media/priyamittal96/project_1/main/Sush_Resources/RAW_recipes.csv'\n",
+    "recipes_df = pd.read_csv(url)\n",
     "recipes_df.head()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -304,13 +305,14 @@
        "4  Made the cheddar bacon topping, adding a sprin...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "interaction_df=pd.read_csv(\"./Project_Data/RAW_interactions.csv\")\n",
+    "url2='https://media.githubusercontent.com/media/priyamittal96/project_1/main/Sush_Resources/RAW_interactions.csv'\n",
+    "interaction_df=pd.read_csv(url2)\n",
     "interaction_df.head()"
    ]
   },
