US cities and fastfood restaurants

--- a/Sun9pm notebooks/Kasy - Monday night.ipynb
+++ b/Sun9pm notebooks/Kasy - Monday night.ipynb
@@ -24,7 +24,7 @@
     "sbux_nutrition_df = pd.read_csv(sbux_nutrition)\n",
     "mcd_nutrition_df = pd.read_csv(mcd_nutrition)\n",
     "subway_nutrition_df = pd.read_csv(subway_nutrition)\n",
-    "city_population = pd.read_csv(city_population)"
+    "city_population = pd.read_csv(city_population)\n"
    ]
   },
   {
