--- a/Priya's Notebook.ipynb
+++ b/Priya's Notebook.ipynb
@@ -14,8 +14,11 @@
     "from scipy.stats import linregress\n",
     "import scipy.stats as st\n",
     "\n",
+    "# Food Desert Data References\n",
     "desert = \"./Priya's Resources/Food Deserts/food_access_research_atlas.csv\"\n",
     "variable = \"./Priya's Resources/Food Deserts/food_access_variable_lookup.csv\"\n",
+    "\n",
+    "#Farmers Market Data References\n",
     "farmers_market = \"./Priya's Resources/Farmers Markets/farmers_markets_from_usda.csv\"\n",
     "county_info = \"./Priya's Resources/Farmers Markets/wiki_county_info.csv\" \n",
     "\n",
