Auto stash before merge of "main" and "origin/main"

--- a/Resources & Notebooks/Sun9pm notebooks/Kasy - Monday night.ipynb
+++ b/Resources & Notebooks/Sun9pm notebooks/Kasy - Monday night.ipynb
@@ -941,6 +941,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "McDonald's                          1886\n",
+       "Burger King                         1154\n",
+       "Taco Bell                            873\n",
+       "Wendy's                              731\n",
+       "Arby's                               518\n",
+       "                                    ... \n",
+       "DQ Grill & Chill / Orange Julius       1\n",
+       "Stars Drive-In                         1\n",
+       "Cafe Rio                               1\n",
+       "Rich's Mighty Fine Burgers Grub        1\n",
+       "Samurai Sam's                          1\n",
+       "Name: name, Length: 548, dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fastdf.name.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
