--- a/Kasy.ipynb
+++ b/Kasy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -16,8 +16,11 @@
     "file_worldwide = \"./Kasy-Resources/worldwide-sbux-locations.csv\"\n",
     "file_mcd = \"./Kasy-Resources/mcdonalds_locations.csv\"\n",
     "sbux_nutrition = \"./Kasy-Resources/starbucks-menu-nutrition-drinks.csv\"\n",
-    "mcd_nutrition = \"./Kasy-Resources/mcd_nutrition.csv\"\n",
     "subway_nutrition = \"./Kasy-Resources/subway_nutrition.csv\"\n",
+    "# Use in final project \n",
+    "mcd_nutrition = \"./Kasy-Resources/mcd_nutrition.csv\"\n",
+    "\n",
+    "\n",
     "\n",
     "sbux_df = pd.read_csv(file_worldwide)\n",
     "sbux_nutrition_df = pd.read_csv(sbux_nutrition)\n",
@@ -28,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,32 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please select from the categories below:\n",
-      "Breakfast\n",
-      "Beef & Pork\n",
-      "Chicken & Fish\n",
-      "Salads\n",
-      "Snacks & Sides\n",
-      "Desserts\n",
-      "Beverages\n",
-      "Coffee & Tea\n",
-      "Smoothies & Shakes\n",
-      "What kind of food category would you like?breakfast\n",
-      "What is the maximum calorie intake that you would like?200\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "print(\"Welcome to McDonald's!\")\n",
+    "print(\"-----------------------------------------\")\n",
     "print(\"Please select from the categories below:\")\n",
     "for i in range(0, len(category_unique)):\n",
-    "    print(category[i])\n",
+    "    print(category_unique[i])\n",
     "category_response = input(\"What kind of food category would you like?\").title()\n",
     "response = input(\"What is the maximum calorie intake that you would like?\")\n",
     "answers = []\n",
@@ -77,63 +63,15 @@
     "        calorie.append(rows[\"Calories\"])\n",
     "        category_list.append(rows[\"Category\"])\n",
     "\n",
-    "answers_df = pd.DataFrame({\"Menu Items\": answers,\n",
-    "                          \"Calorie\": calorie,\n",
-    "                          \"Category\": category_list})\n"
+    "answers_df = pd.DataFrame({\"Category\": category_list, \"Menu Items\": answers, \"Calorie\": calorie})\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Menu Items</th>\n",
-       "      <th>Calorie</th>\n",
-       "      <th>Category</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Hash Brown</td>\n",
-       "      <td>150</td>\n",
-       "      <td>Breakfast</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Menu Items  Calorie   Category\n",
-       "0  Hash Brown      150  Breakfast"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "answers_df"
    ]
